@startuml
'https://plantuml.com/class-diagram


class Person{
+PersonId
+PersonName
+PersonTlf
+PersonAddress

}

class Profile{
+personInfo
+hobbies

}

class Hobbies{
+Object[] activities
+Object[] interests
}

class Address{
+CityName
+postCode
}

Profile"1"--"1"Person
Profile "1...*"--"*"Hobbies
Address"1"--"1...*" Person



@enduml